<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView  
	    android:layout_height="wrap_content" 
	    android:layout_width="match_parent"
	    android:text="@string/main_sub_text"
	    android:gravity="center" 
	    android:padding="20dp" />
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    style="?android:attr/buttonBarStyle"
	    android:orientation="vertical" >
	    
	    <Button 
		    android:id="@+id/call_logs"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:text="@string/button_call_history"
			style="?android:attr/buttonBarButtonStyle"
			android:padding="20dp" />
			
		<Button
		    android:id="@+id/text_logs"
		    android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:text="@string/button_text_history"
			style="?android:attr/buttonBarButtonStyle"
			android:padding="20dp" />
		
		<Button
		    android:id="@+id/groups"
		    android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:text="@string/button_groups"
			style="?android:attr/buttonBarButtonStyle"
			android:padding="20dp" />
		    
	</LinearLayout>
	
</LinearLayout>
